test/netlist/error/any-used-var.bop
A(a) = c
where
  _ = not(a);
  c = id(_);
end where;
